<resources>
    <string name="app_name">AgendiX</string>

    <string name="name">Nombre</string>
    <string name="lastName">Apellido</string>
    <string name="domain">Empresa *</string>
    <string name="mobilePhone">Telefono Móvil *</string>
    <string name="phone">Telefono *</string>
    <string name="email">Correo Electrónico *</string>
    <string name="note">Nota Adicional *</string>

</resources>
